# bump-allocator-program

./: .gitignore  Anchor.toml  Cargo.toml  README.md
measured/: Cargo.toml  README.md
measured/src/: measure_tests.rs
programs/allocator/: Cargo.toml
programs/allocator/src/: customize_allocator.rs  lib.rs
src/: allocator.rs  main.rs  measure_tests.rs  multi_thread_allocator.rs
tests/: Cargo.toml
tests/src/: lib.rs
