[workspace]
members = [
    "programs/*",
    "tests",
    "rust-native"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.29.0"
solana-program-test = { version = "1.18.26" }
anchor-client = "0.29.0"
